--- a/index.html
+++ b/index.html
@@ -1,11 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Delubyo</title>
-  <link rel="stylesheet" href="/src/styles.css">
-</head>
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Delubyo</title>
+    <link rel="icon" type="/image/png" href="/image/favicon-96x96.png" sizes="96x96" />
+    <link rel="icon" type="/image/svg+xml" href="/image/favicon.svg" />
+    <link rel="shortcut icon" href="/image/favicon.ico" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/image/apple-touch-icon.png" />
+    <meta name="apple-mobile-web-app-title" content="Delubyo" />
+    <link rel="manifest" href="/image/site.webmanifest" />
+    <link rel="stylesheet" href="/src/styles.css">
+  </head>
 <body>
   <div class="app-container">
     <header>
